[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/images/harbor_bg.png" type="Texture" id=1]
[ext_resource path="res://prefabs/ship_window/ShipWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/board.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/heading.tres" type="DynamicFont" id=4]
[ext_resource path="res://prefabs/market_window/MarketWindow.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/map-btn-hover.png" type="Texture" id=6]
[ext_resource path="res://assets/images/map-btn.png" type="Texture" id=7]
[ext_resource path="res://screens/harbor/Harbor.gd" type="Script" id=8]
[ext_resource path="res://assets/images/gold-coins.png" type="Texture" id=9]
[ext_resource path="res://prefabs/shipyard_window/ShipyardWindow.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/images/book.png" type="Texture" id=11]
[ext_resource path="res://prefabs/info_window/InfoWindow.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/images/shipyard-btn-hover.png" type="Texture" id=13]
[ext_resource path="res://assets/images/shipyard-btn.png" type="Texture" id=14]
[ext_resource path="res://assets/images/ship-window-btn-hover.png" type="Texture" id=15]
[ext_resource path="res://assets/images/ship-window-btn.png" type="Texture" id=16]

[node name="Harbor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="HarborBg" type="Sprite" parent="."]
position = Vector2( 958.686, 538.875 )
scale = Vector2( 0.752202, 0.850157 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HarborName" type="Node2D" parent="."]
position = Vector2( 832, 24 )
__meta__ = {
"_edit_group_": true
}

[node name="Board" type="Sprite" parent="HarborName"]
position = Vector2( 154, 29.5 )
scale = Vector2( 0.779894, 1.0274 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="HarborName"]
margin_left = -4.0
margin_top = -3.0
margin_right = 307.0
margin_bottom = 66.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Harbor Name"
align = 1
valign = 1

[node name="Tooltip" type="Button" parent="HarborName"]
margin_left = -111.0
margin_top = -9.0
margin_right = 419.0
margin_bottom = 68.0
hint_tooltip = "You are here"
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="MarketWindow" parent="." instance=ExtResource( 5 )]
position = Vector2( 229, 189 )

[node name="ShipWindow" parent="." instance=ExtResource( 2 )]
position = Vector2( 1356, 295 )

[node name="Gold" type="Control" parent="."]
margin_top = 6.0
margin_right = 40.0
margin_bottom = 46.0

[node name="ColorRect" type="ColorRect" parent="Gold"]
margin_left = 20.0
margin_top = 13.0
margin_right = 307.0
margin_bottom = 74.0
hint_tooltip = "Your gold"
color = Color( 0, 0, 0, 0.627451 )

[node name="Gold-coins" type="Sprite" parent="Gold"]
position = Vector2( 53, 45 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="Gold"]
margin_left = 86.0
margin_top = 14.0
margin_right = 307.0
margin_bottom = 74.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 4 )
text = "1000"
valign = 1

[node name="ShipyardWindow" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 1331, 327 )

[node name="Day" type="Control" parent="."]
margin_left = 1511.0
margin_top = 6.0
margin_right = 1551.0
margin_bottom = 46.0

[node name="ColorRect" type="ColorRect" parent="Day"]
margin_left = 117.0
margin_top = 13.0
margin_right = 386.0
margin_bottom = 74.0
hint_tooltip = "Current day"
color = Color( 0, 0, 0, 0.627451 )

[node name="book" type="Sprite" parent="Day"]
position = Vector2( 353, 43 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="Day"]
margin_left = 120.0
margin_top = 14.0
margin_right = 313.0
margin_bottom = 74.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 4 )
text = "1000"
align = 2
valign = 1

[node name="InfoWindow" parent="." instance=ExtResource( 12 )]
visible = false

[node name="MapButton" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1798.0
margin_top = 418.0
margin_right = 1894.0
margin_bottom = 513.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="ShipyardButton" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1798.0
margin_top = 308.0
margin_right = 1894.0
margin_bottom = 403.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 13 )

[node name="ShipButton" type="TextureButton" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1798.0
margin_top = 308.0
margin_right = 1894.0
margin_bottom = 403.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 15 )

[connection signal="button_up" from="MapButton" to="." method="_on_MapButton_button_up"]
[connection signal="button_up" from="ShipyardButton" to="." method="_on_ShipyardButton_button_up"]
[connection signal="button_up" from="ShipButton" to="." method="_on_ShipButton_button_up"]
